fixed student filter label sizing stretching bug

--- a/public/assets/styles/sass/base/Directives/dashboard.scss
+++ b/public/assets/styles/sass/base/Directives/dashboard.scss
@@ -117,14 +117,13 @@ label.filter-label {
   display: flex;
   align-items: center;
   flex-basis: 100%;
-  overflow: hidden;
   // height: fit-content;
+  max-height: 20px;
+  overflow: hidden;
   padding-top: 0;
   padding-bottom: 0;
   cursor: pointer;
   cursor: hand;
-  // min-height: 14px;
-  // max-height: 0;
   input {
     display: flex;
     // height: fit-content;
@@ -138,6 +137,9 @@ label.filter-label {
     display: inline-block;
     text-overflow: ellipsis;
     margin: 0;
+    &:hover {
+      font-weight: bold;
+    }
   }
 }
 
@@ -171,7 +173,7 @@ div.student-filter-options {
   flex-wrap: nowrap;
   justify-content: flex-start;
   width: 100%;
-  height: auto;
+  height: fit-content;
   overflow-y: scroll;
   overflow-x: auto;
   label p {
