--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -402,6 +402,7 @@ label.filter-label {
   display: flex;
   align-items: center;
   flex-basis: 100%;
+  max-height: 20px;
   overflow: hidden;
   padding-top: 0;
   padding-bottom: 0;
@@ -418,6 +419,8 @@ label.filter-label {
     display: inline-block;
     text-overflow: ellipsis;
     margin: 0; }
+    label.filter-label p:hover {
+      font-weight: bold; }
 
 form.filter-form {
   height: fit-content; }
@@ -444,7 +447,7 @@ div.student-filter-options {
   flex-wrap: nowrap;
   justify-content: flex-start;
   width: 100%;
-  height: auto;
+  height: fit-content;
   overflow-y: scroll;
   overflow-x: auto; }
   div.student-filter-options label p {
